src/Header.css
.header {
    background-color: #006d77;
    height: 4em;
    line-height: 4.5em;
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
}

.header img {
    width: 30%;
    max-width: 30%;
    border: 1.5px solid #006d77;
}

.header>ul {
    display: inline;
    margin: 0;
    list-style-type: none;
    margin-right: 4em;

}

.header>ul>li {
    display: inline;
    margin-right: 1.1em;
}

.header>ul>li>a {
    font-weight: 400;
    color: #ffffff;
    text-decoration: none;
}

.header>ul>li>a:hover {
    color: #e29578;
}

.header>ul>li.logo {
    font-size: 2em;
}

.header-left {
    justify-self: start;
    font-size: 0.6rem;
}

.header-right{
    justify-self: end;
    font-size: 1.5em;
} 

@media (max-width: 750px) {
    .header-left {
        font-size: 0.3rem;

    }
  }

